# Optimus_Prime

llm_lp_solver/: .gitignore
llm_lp_solver/src/: agent_flow.py  main.py
llm_lp_solver/src/inputs/: arbitrage.txt  detailed_arbitrage.txt
llm_lp_solver/tests/samples/: sample_solutions.py      # Solutions for testing
llm_solver/: README.md  pyproject.toml  sample.env
llm_solver/src/: agent_flow.py  arbitrage_data_generator.py  llm_client.py  main.py  models.py
llm_solver/src/inputs/: README.md  arbitrage.txt  detailed_arbitrage.txt  sample_input.txt  textbook_1.txt  textbook_2.txt
llm_solver/tests/samples/: sample_problems.txt
sample_lp_solver/: README.md  main.py  pyproject.toml
