[project]
name = "llm-lp-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==2.0.1",
    "pytest>=6.2.5",
    "python-dotenv==0.19.1",
    "requests==2.26.0",
    "pulp>=2.7.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.2",
    "langgraph>=0.0.20",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.3.0",
]
